--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,23 @@
-plugins {
-    id 'org.spongepowered.plugin' version "0.8.1"
-    id 'java'
-    id "com.qixalite.spongestart" version "1.6.2"
+buildscript {
+    repositories {
+        maven {
+            name = 'forge'
+            url = 'https://files.minecraftforge.net/maven'
+        }
+    }
+
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+    }
 }
+
+plugins {
+    id 'org.spongepowered.plugin' version "0.9.0"
+    id 'java'
+    id 'com.qixalite.spongestart2' version '3.2.3'
+    id 'net.minecrell.vanillagradle.server' version '2.2-6'
+}
+
 
 group = pluginGroup
 version = pluginVersion
@@ -16,15 +31,15 @@ repositories {
 }
 
 spongestart{
-    eula true
-
     minecraft '1.12.2'
-    type 'stable'
+}
+
+minecraft {
+    version = '1.12.2'
+    mappings = 'stable_39'
 }
 
 
 dependencies {
-    compile 'org.spongepowered:spongeapi:7.0.0'
+    compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
 }
-
-sponge.plugin.id = pluginId
